Update README.md - Added info on how to run